--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
+
+*{
+  box-sizing: border-box;
+  font-family:sans-serif;
+  color:#393c41;
+  margin:0;
+  padding:0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+
+.arrow{
+
+ width:40px;
+ height:40px;
+ animation: animateDown infinite 1.5s; 
+}
+a{
+  text-decoration:none;
+}
+@media(max-width:768px){
+  *{
+  font-size: 12px;
+    letter-spacing: 0;
+    font-weight: 400;
+  }
+
+  .buttons{
+    flex-direction: column;
+    align-items: center;
+    
+  
+}
+
+}
+@keyframes animateDown {
+  0%,20%,50%,80%,100%{
+    transform:translateY(0);
+  }
+  40%{
+    transform: translateY(5px);
+  }
+  60%{
+    transform: translateY(3px);
+  }
 }
